--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^11.11.17",
     "mongoose": "^8.8.2",
     "next": "15.0.3",
+    "next-auth": "^4.24.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
